@@ -7,14 +7,14 @@ import sptech.school.v2.cleanarch.core.dtos.internal.dashboard.ChartPieDTO;
 import sptech.school.v2.cleanarch.core.dtos.internal.dashboard.teacher.TeacherStatsDTO;
 import sptech.school.v2.cleanarch.core.dtos.internal.dashboard.teacher.TeacherTableDTO;
 import sptech.school.v2.cleanarch.core.dtos.out.dashboard.teacher.TeacherDashResponseDTO;
+import sptech.school.v2.cleanarch.domain.entities.Teacher;
+import sptech.school.v2.cleanarch.domain.enumerated.Subject;
 import sptech.school.v2.cleanarch.infra.persistence.repository.dashboard.teacher.TeacherDashJpaRepository;
 import sptech.school.v2.cleanarch.infra.persistence.repository.dashboard.teacher.projections.HoursByTeacher;
-import sptech.school.v2.cleanarch.infra.persistence.repository.dashboard.teacher.projections.TeacherBasicProjection;
 
 import java.time.LocalDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Component
 public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
@@ -27,8 +27,13 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
 
     @Override
     public TeacherDashResponseDTO getTeacherDashData(LocalDateTime start, LocalDateTime end) {
-        List<TeacherBasicProjection> teachers = repository.findAllBasic();
+        List<Teacher> teachers = repository.findAllBasic();
         int totalTeachers = teachers.size();
+
+        List<Teacher> activeTeachers = teachers.stream()
+                .filter(t -> !t.isDeleted())
+                .toList();
+        int totalActive = activeTeachers.size();
 
         List<HoursByTeacher> hoursList = repository.sumHoursPerTeacherBetween(start, end);
         Map<Integer, Double> hoursPerTeacher = hoursList.stream()
@@ -37,21 +42,22 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
                         h -> Optional.ofNullable(h.getHours()).orElse(0.0)
                 ));
 
-        double totalHours = hoursPerTeacher.values().stream()
-                .filter(Objects::nonNull)
+        double totalHoursActive = activeTeachers.stream()
+                .map(t -> hoursPerTeacher.getOrDefault(t.getId(), 0.0))
                 .mapToDouble(Double::doubleValue)
                 .sum();
-        double averageHours = totalTeachers == 0 ? 0.0 : totalHours / totalTeachers;
+        double averageHoursActive = totalActive == 0 ? 0.0 : totalHoursActive / totalActive;
 
-        double totalHourlyRate = teachers.stream()
+        double totalHourlyRateActive = activeTeachers.stream()
                 .filter(t -> t.getHourlyRate() != null)
-                .mapToDouble(TeacherBasicProjection::getHourlyRate)
+                .mapToDouble(Teacher::getHourlyRate)
                 .sum();
-        double averageHourlyRate = totalTeachers == 0 ? 0.0 : totalHourlyRate / totalTeachers;
+        double averageHourlyRateActive = totalActive == 0 ? 0.0 : totalHourlyRateActive / totalActive;
 
-        TeacherStatsDTO stats = new TeacherStatsDTO(totalTeachers, averageHours, averageHourlyRate, totalHours);
+        TeacherStatsDTO stats = new TeacherStatsDTO(totalTeachers, averageHoursActive, averageHourlyRateActive, totalHoursActive);
 
         List<Map.Entry<Integer, Double>> top = hoursPerTeacher.entrySet().stream()
+                .filter(e -> activeTeachers.stream().anyMatch(t -> t.getId().equals(e.getKey())))
                 .sorted(Map.Entry.<Integer, Double>comparingByValue().reversed())
                 .limit(5)
                 .toList();
@@ -59,7 +65,7 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
         List<ChartBarDTO> topTeachers = top.stream()
                 .map(entry -> {
                     Integer id = entry.getKey();
-                    return teachers.stream()
+                    return activeTeachers.stream()
                             .filter(t -> t.getId().equals(id))
                             .findFirst()
                             .map(t -> new ChartBarDTO(t.getName(), entry.getValue()))
@@ -69,15 +75,8 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
                 .collect(Collectors.toList());
 
         Map<String, Long> countBySubject = teachers.stream()
-                .flatMap(t -> {
-                    String subjectString = t.getSubjects();
-                    if (subjectString == null || subjectString.trim().isEmpty()) {
-                        return Stream.empty();
-                    }
-                    return Arrays.stream(subjectString.split(","))
-                            .map(String::trim);
-                })
-                .filter(s -> !s.isEmpty())
+                .flatMap(t -> Optional.ofNullable(t.getSubjects()).orElse(List.of()).stream())
+                .map(Subject::name)
                 .collect(Collectors.groupingBy(s -> s, Collectors.counting()));
 
         List<ChartPieDTO> disciplineDistribution = countBySubject.entrySet().stream()
@@ -87,10 +86,14 @@ public class TeacherDashQueryJpaAdapter implements TeacherDashQueryGateway {
         List<TeacherTableDTO> table = teachers.stream()
                 .map(t -> {
                     String name = t.getName();
-                    String subject = t.getSubjects() == null || t.getSubjects().trim().isEmpty() ? "—" : t.getSubjects();
+                    String subject = Optional.ofNullable(t.getSubjects()).orElse(List.of())
+                            .stream()
+                            .map(Subject::name)
+                            .collect(Collectors.joining(","));
+                    if (subject.isBlank()) subject = "—";
                     Double hoursWorked = hoursPerTeacher.getOrDefault(t.getId(), 0.0);
                     String hourlyRate = t.getHourlyRate() != null ? String.format("R$ %.2f", t.getHourlyRate()) : "—";
-                    String status = "Active"; // Supondo que todos na lista 'teachers' estejam ativos
+                    String status = t.isDeleted() ? "Inactive" : "Active";
                     return new TeacherTableDTO(name, subject, hoursWorked, hourlyRate, status);
                 })
                 .collect(Collectors.toList());
